packages/lodepng_flutter/src/lodepng.h


typedef enum LodePNGColorType {
  LCT_GREY = 0, 
  LCT_RGB = 2, 
  LCT_PALETTE = 3, 
  LCT_GREY_ALPHA = 4, 
  LCT_RGBA = 6, 
  LCT_MAX_OCTET_VALUE = 255
} LodePNGColorType;
typedef struct LodePNGDecompressSettings LodePNGDecompressSettings;
struct LodePNGDecompressSettings {
  unsigned ignore_adler32; 
  unsigned ignore_nlen; 
  size_t max_output_size;
  unsigned (*custom_zlib)(unsigned char**, size_t*,
                          const unsigned char*, size_t,
                          const LodePNGDecompressSettings*);
  unsigned (*custom_inflate)(unsigned char**, size_t*,
                             const unsigned char*, size_t,
                             const LodePNGDecompressSettings*);
  const void* custom_context; 
};
typedef struct LodePNGCompressSettings LodePNGCompressSettings;
struct LodePNGCompressSettings  {
  unsigned btype; 
  unsigned use_lz77; 
  unsigned windowsize; 
  unsigned minmatch; 
  unsigned nicematch; 
  unsigned lazymatching; 
  unsigned (*custom_zlib)(unsigned char**, size_t*,
                          const unsigned char*, size_t,
                          const LodePNGCompressSettings*);
  unsigned (*custom_deflate)(unsigned char**, size_t*,
                             const unsigned char*, size_t,
                             const LodePNGCompressSettings*);
  const void* custom_context; 
};
typedef struct LodePNGColorMode {
  LodePNGColorType colortype; 
  unsigned bitdepth;  
  unsigned char* palette; 
  size_t palettesize; 
  unsigned key_defined; 
  unsigned key_r;       
  unsigned key_g;       
  unsigned key_b;       
} LodePNGColorMode;
unsigned lodepng_get_bpp(const LodePNGColorMode* info);
unsigned lodepng_has_palette_alpha(const LodePNGColorMode* info);
unsigned lodepng_can_have_alpha(const LodePNGColorMode* info);
size_t lodepng_get_raw_size(unsigned w, unsigned h, const LodePNGColorMode* color);
typedef struct LodePNGTime {
  unsigned year;    
  unsigned month;   
  unsigned day;     
  unsigned hour;    
  unsigned minute;  
  unsigned second;  
} LodePNGTime;
typedef struct LodePNGInfo {
  unsigned compression_method;
  unsigned filter_method;     
  unsigned interlace_method;  
  LodePNGColorMode color;     
#ifdef LODEPNG_COMPILE_ANCILLARY_CHUNKS
  unsigned background_defined; 
  unsigned background_r;       
  unsigned background_g;       
  unsigned background_b;       
  size_t text_num; 
  char** text_keys; 
  char** text_strings; 
  size_t itext_num; 
  char** itext_keys; 
  char** itext_langtags; 
  char** itext_transkeys; 
  char** itext_strings; 
  unsigned time_defined; 
  LodePNGTime time;
  unsigned phys_defined; 
  unsigned phys_x; 
  unsigned phys_y; 
  unsigned phys_unit; 
  unsigned gama_defined; 
  unsigned gama_gamma;   
  unsigned chrm_defined; 
  unsigned chrm_white_x; 
  unsigned chrm_white_y; 
  unsigned chrm_red_x;   
  unsigned chrm_red_y;   
  unsigned chrm_green_x; 
  unsigned chrm_green_y; 
  unsigned chrm_blue_x;  
  unsigned chrm_blue_y;  
  unsigned srgb_defined; 
  unsigned srgb_intent;  
  unsigned iccp_defined;      
  char* iccp_name;            
  unsigned char* iccp_profile;
  unsigned iccp_profile_size; 
  unsigned sbit_defined; 
  unsigned sbit_r;       
  unsigned sbit_g;       
  unsigned sbit_b;       
  unsigned sbit_a;       
  unsigned char* unknown_chunks_data[3];
  size_t unknown_chunks_size[3]; 
#endif 
} LodePNGInfo;
void lodepng_info_init(LodePNGInfo* info);
void lodepng_info_cleanup(LodePNGInfo* info);
unsigned lodepng_info_copy(LodePNGInfo* dest, const LodePNGInfo* source);
unsigned lodepng_add_text(LodePNGInfo* info, const char* key, const char* str); 
void lodepng_clear_text(LodePNGInfo* info); 
unsigned lodepng_add_itext(LodePNGInfo* info, const char* key, const char* langtag,
                           const char* transkey, const char* str); 
void lodepng_clear_itext(LodePNGInfo* info); 
unsigned lodepng_set_icc(LodePNGInfo* info, const char* name, const unsigned char* profile, unsigned profile_size);
void lodepng_clear_icc(LodePNGInfo* info); 
unsigned lodepng_convert(unsigned char* out, const unsigned char* in,
                         const LodePNGColorMode* mode_out, const LodePNGColorMode* mode_in,
                         unsigned w, unsigned h);
typedef struct LodePNGDecoderSettings {
  LodePNGDecompressSettings zlibsettings; 
  unsigned ignore_crc; 
  unsigned ignore_critical; 
  unsigned ignore_end; 
  unsigned color_convert; 
#ifdef LODEPNG_COMPILE_ANCILLARY_CHUNKS
  unsigned read_text_chunks; 
  unsigned remember_unknown_chunks;
  size_t max_text_size;
  size_t max_icc_size;
#endif 
} LodePNGDecoderSettings;
void lodepng_decoder_settings_init(LodePNGDecoderSettings* settings);
typedef enum LodePNGFilterStrategy {
  LFS_ZERO = 0,
  LFS_ONE = 1,
  LFS_TWO = 2,
  LFS_THREE = 3,
  LFS_FOUR = 4,
  LFS_MINSUM,
  LFS_ENTROPY,
  LFS_BRUTE_FORCE,
  LFS_PREDEFINED
} LodePNGFilterStrategy;
typedef struct LodePNGColorStats {
  unsigned colored; 
  unsigned key; 
  unsigned short key_r; 
  unsigned short key_g;
  unsigned short key_b;
  unsigned alpha; 
  unsigned numcolors; 
  unsigned char palette[1024]; 
  unsigned bits; 
  size_t numpixels;
  unsigned allow_palette; 
  unsigned allow_greyscale; 
} LodePNGColorStats;
void lodepng_color_stats_init(LodePNGColorStats* stats);
unsigned lodepng_compute_color_stats(LodePNGColorStats* stats,
                                     const unsigned char* image, unsigned w, unsigned h,
                                     const LodePNGColorMode* mode_in);
typedef struct LodePNGEncoderSettings {
  LodePNGCompressSettings zlibsettings; 
  unsigned auto_convert;
  unsigned filter_palette_zero;
  LodePNGFilterStrategy filter_strategy;
  const unsigned char* predefined_filters;
  unsigned force_palette;
#ifdef LODEPNG_COMPILE_ANCILLARY_CHUNKS
  unsigned add_id;
  unsigned text_compression;
#endif 
} LodePNGEncoderSettings;
void lodepng_encoder_settings_init(LodePNGEncoderSettings* settings);
typedef struct LodePNGState {
#ifdef LODEPNG_COMPILE_DECODER
  LodePNGDecoderSettings decoder; 
#endif 
#ifdef LODEPNG_COMPILE_ENCODER
  LodePNGEncoderSettings encoder; 
#endif 
  LodePNGColorMode info_raw; 
  LodePNGInfo info_png; 
  unsigned error;
} LodePNGState;
void lodepng_state_init(LodePNGState* state);
void lodepng_state_cleanup(LodePNGState* state);