packages/lodepng_flutter/lib/lodepng_flutter_bindings_generated.dart


  /// only returns true if there is a palette and there is a value in the palette with alpha < 255.
  /// Loops through the palette to check this.
  int lodepng_has_palette_alpha(
    ffi.Pointer<LodePNGColorMode> info,
  ) {
    return _lodepng_has_palette_alpha(
      info,
    );
  }

  late final _lodepng_has_palette_alphaPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<LodePNGColorMode>)>>('lodepng_has_palette_alpha');
  late final _lodepng_has_palette_alpha = _lodepng_has_palette_alphaPtr
      .asFunction<int Function(ffi.Pointer<LodePNGColorMode>)>();

  /// Check if the given color info indicates the possibility of having non-opaque pixels in the PNG image.
  /// Returns true if the image can have translucent or invisible pixels (it still be opaque if it doesn't use such pixels).
  /// Returns false if the image can only have opaque pixels.
  /// In detail, it returns true only if it's a color type with alpha, or has a palette with non-opaque values,
  /// or if "key_defined" is true.
  int lodepng_can_have_alpha(
    ffi.Pointer<LodePNGColorMode> info,
  ) {
    return _lodepng_can_have_alpha(
      info,
    );
  }

  late final _lodepng_can_have_alphaPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<LodePNGColorMode>)>>('lodepng_can_have_alpha');
  late final _lodepng_can_have_alpha = _lodepng_can_have_alphaPtr
      .asFunction<int Function(ffi.Pointer<LodePNGColorMode>)>();

  /// Returns the byte size of a raw image buffer with given width, height and color mode
  int lodepng_get_raw_size(
    int w,
    int h,
    ffi.Pointer<LodePNGColorMode> color,
  ) {
    return _lodepng_get_raw_size(
      w,
      h,
      color,
    );
  }

  late final _lodepng_get_raw_sizePtr = _lookup<
      ffi.NativeFunction<
          ffi.Size Function(ffi.UnsignedInt, ffi.UnsignedInt,
              ffi.Pointer<LodePNGColorMode>)>>('lodepng_get_raw_size');
  late final _lodepng_get_raw_size = _lodepng_get_raw_sizePtr
      .asFunction<int Function(int, int, ffi.Pointer<LodePNGColorMode>)>();

  /// init, cleanup and copy functions to use with this struct
  void lodepng_info_init(
    ffi.Pointer<LodePNGInfo> info,
  ) {
    return _lodepng_info_init(
      info,
    );
  }

  late final _lodepng_info_initPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<LodePNGInfo>)>>(
          'lodepng_info_init');
  late final _lodepng_info_init = _lodepng_info_initPtr
      .asFunction<void Function(ffi.Pointer<LodePNGInfo>)>();

  void lodepng_info_cleanup(
    ffi.Pointer<LodePNGInfo> info,
  ) {
    return _lodepng_info_cleanup(
      info,
    );
  }

  late final _lodepng_info_cleanupPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<LodePNGInfo>)>>(
          'lodepng_info_cleanup');
  late final _lodepng_info_cleanup = _lodepng_info_cleanupPtr
      .asFunction<void Function(ffi.Pointer<LodePNGInfo>)>();

  /// return value is error code (0 means no error)
  int lodepng_info_copy(
    ffi.Pointer<LodePNGInfo> dest,
    ffi.Pointer<LodePNGInfo> source,
  ) {
    return _lodepng_info_copy(
      dest,
      source,
    );
  }

  late final _lodepng_info_copyPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<LodePNGInfo>,
              ffi.Pointer<LodePNGInfo>)>>('lodepng_info_copy');
  late final _lodepng_info_copy = _lodepng_info_copyPtr.asFunction<
      int Function(ffi.Pointer<LodePNGInfo>, ffi.Pointer<LodePNGInfo>)>();

  int lodepng_add_text(
    ffi.Pointer<LodePNGInfo> info,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Char> str,
  ) {
    return _lodepng_add_text(
      info,
      key,
      str,
    );
  }

  late final _lodepng_add_textPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<LodePNGInfo>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('lodepng_add_text');
  late final _lodepng_add_text = _lodepng_add_textPtr.asFunction<
      int Function(ffi.Pointer<LodePNGInfo>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  void lodepng_clear_text(
    ffi.Pointer<LodePNGInfo> info,
  ) {
    return _lodepng_clear_text(
      info,
    );
  }

  late final _lodepng_clear_textPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<LodePNGInfo>)>>(
          'lodepng_clear_text');
  late final _lodepng_clear_text = _lodepng_clear_textPtr
      .asFunction<void Function(ffi.Pointer<LodePNGInfo>)>();

  int lodepng_add_itext(
    ffi.Pointer<LodePNGInfo> info,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Char> langtag,
    ffi.Pointer<ffi.Char> transkey,
    ffi.Pointer<ffi.Char> str,
  ) {
    return _lodepng_add_itext(
      info,
      key,
      langtag,
      transkey,
      str,
    );
  }

  late final _lodepng_add_itextPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<LodePNGInfo>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('lodepng_add_itext');
  late final _lodepng_add_itext = _lodepng_add_itextPtr.asFunction<
      int Function(
          ffi.Pointer<LodePNGInfo>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  void lodepng_clear_itext(
    ffi.Pointer<LodePNGInfo> info,
  ) {
    return _lodepng_clear_itext(
      info,
    );
  }

  late final _lodepng_clear_itextPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<LodePNGInfo>)>>(
          'lodepng_clear_itext');
  late final _lodepng_clear_itext = _lodepng_clear_itextPtr
      .asFunction<void Function(ffi.Pointer<LodePNGInfo>)>();

  /// replaces if exists
  int lodepng_set_icc(
    ffi.Pointer<LodePNGInfo> info,
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.UnsignedChar> profile,
    int profile_size,
  ) {
    return _lodepng_set_icc(
      info,
      name,
      profile,
      profile_size,
    );
  }

  late final _lodepng_set_iccPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<LodePNGInfo>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.UnsignedChar>,
              ffi.UnsignedInt)>>('lodepng_set_icc');
  late final _lodepng_set_icc = _lodepng_set_iccPtr.asFunction<
      int Function(ffi.Pointer<LodePNGInfo>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.UnsignedChar>, int)>();

  void lodepng_clear_icc(
    ffi.Pointer<LodePNGInfo> info,
  ) {
    return _lodepng_clear_icc(
      info,
    );
  }

  late final _lodepng_clear_iccPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<LodePNGInfo>)>>(
          'lodepng_clear_icc');
  late final _lodepng_clear_icc = _lodepng_clear_iccPtr
      .asFunction<void Function(ffi.Pointer<LodePNGInfo>)>();

  /// Converts raw buffer from one color type to another color type, based on
  /// LodePNGColorMode structs to describe the input and output color type.
  /// See the reference manual at the end of this header file to see which color conversions are supported.
  /// return value = LodePNG error code (0 if all went ok, an error if the conversion isn't supported)
  /// The out buffer must have size (w * h * bpp + 7) / 8, where bpp is the bits per pixel
  /// of the output color type (lodepng_get_bpp).
  /// For < 8 bpp images, there should not be padding bits at the end of scanlines.
  /// For 16-bit per channel colors, uses big endian format like PNG does.
  /// Return value is LodePNG error code
  int lodepng_convert(
    ffi.Pointer<ffi.UnsignedChar> out,
    ffi.Pointer<ffi.UnsignedChar> in1,
    ffi.Pointer<LodePNGColorMode> mode_out,
    ffi.Pointer<LodePNGColorMode> mode_in,
    int w,
    int h,
  ) {
    return _lodepng_convert(
      out,
      in1,
      mode_out,
      mode_in,
      w,
      h,
    );
  }

  late final _lodepng_convertPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.UnsignedChar>,
              ffi.Pointer<ffi.UnsignedChar>,
              ffi.Pointer<LodePNGColorMode>,
              ffi.Pointer<LodePNGColorMode>,
              ffi.UnsignedInt,
              ffi.UnsignedInt)>>('lodepng_convert');
  late final _lodepng_convert = _lodepng_convertPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.UnsignedChar>,
          ffi.Pointer<ffi.UnsignedChar>,
          ffi.Pointer<LodePNGColorMode>,
          ffi.Pointer<LodePNGColorMode>,
          int,
          int)>();

  void lodepng_decoder_settings_init(
    ffi.Pointer<LodePNGDecoderSettings> settings,
  ) {
    return _lodepng_decoder_settings_init(
      settings,
    );
  }

  late final _lodepng_decoder_settings_initPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<LodePNGDecoderSettings>)>>(
      'lodepng_decoder_settings_init');
  late final _lodepng_decoder_settings_init = _lodepng_decoder_settings_initPtr
      .asFunction<void Function(ffi.Pointer<LodePNGDecoderSettings>)>();

  void lodepng_color_stats_init(
    ffi.Pointer<LodePNGColorStats> stats,
  ) {
    return _lodepng_color_stats_init(
      stats,
    );
  }

  late final _lodepng_color_stats_initPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<LodePNGColorStats>)>>(
      'lodepng_color_stats_init');
  late final _lodepng_color_stats_init = _lodepng_color_stats_initPtr
      .asFunction<void Function(ffi.Pointer<LodePNGColorStats>)>();

  /// Get a LodePNGColorStats of the image. The stats must already have been inited.
  /// Returns error code (e.g. alloc fail) or 0 if ok.
  int lodepng_compute_color_stats(
    ffi.Pointer<LodePNGColorStats> stats,
    ffi.Pointer<ffi.UnsignedChar> image,
    int w,
    int h,
    ffi.Pointer<LodePNGColorMode> mode_in,
  ) {
    return _lodepng_compute_color_stats(
      stats,
      image,
      w,
      h,
      mode_in,
    );
  }

  late final _lodepng_compute_color_statsPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<LodePNGColorStats>,
              ffi.Pointer<ffi.UnsignedChar>,
              ffi.UnsignedInt,
              ffi.UnsignedInt,
              ffi.Pointer<LodePNGColorMode>)>>('lodepng_compute_color_stats');
  late final _lodepng_compute_color_stats =
      _lodepng_compute_color_statsPtr.asFunction<
          int Function(
              ffi.Pointer<LodePNGColorStats>,
              ffi.Pointer<ffi.UnsignedChar>,
              int,
              int,
              ffi.Pointer<LodePNGColorMode>)>();

  void lodepng_encoder_settings_init(
    ffi.Pointer<LodePNGEncoderSettings> settings,
  ) {
    return _lodepng_encoder_settings_init(
      settings,
    );
  }

  late final _lodepng_encoder_settings_initPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<LodePNGEncoderSettings>)>>(
      'lodepng_encoder_settings_init');
  late final _lodepng_encoder_settings_init = _lodepng_encoder_settings_initPtr
      .asFunction<void Function(ffi.Pointer<LodePNGEncoderSettings>)>();

  /// init, cleanup and copy functions to use with this struct
  void lodepng_state_init(
    ffi.Pointer<LodePNGState> state,
  ) {
    return _lodepng_state_init(
      state,
    );
  }

  late final _lodepng_state_initPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<LodePNGState>)>>(
          'lodepng_state_init');
  late final _lodepng_state_init = _lodepng_state_initPtr
      .asFunction<void Function(ffi.Pointer<LodePNGState>)>();

  void lodepng_state_cleanup(
    ffi.Pointer<LodePNGState> state,
  ) {
    return _lodepng_state_cleanup(
      state,
    );
  }
